[project]
name = "ot2_module"
version = "2.1.0"
description = "Software for automatting an OT2 liquid_handler"
authors = [
    {name = "Ryan D. Lewis", email="ryan.lewis@anl.gov"},
    {name = "Doga Ozgulbas", email="dozgulbas@anl.gov"},
    {name = "Abe Stroka", email="astroka@anl.gov"},
    {name = "Tobias Ginsburg", email = "tginsburg@anl.gov"},
]
dependencies = [
    "madsci.node_module>=0.4.3",
    "madsci.client>=0.4.3",
    "madsci.common>=0.4.3"
]
requires-python = ">=3.9.1"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/AD-SDL/pf400_module"

#####################
# Development Tools #
#####################

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.12.3",
]
