[project]
name = "ot2_module"
version = "3.0.0"
description = "MADSci node module for Opentrons OT-2 and Flex liquid handlers"
authors = [
    {name = "Ryan D. Lewis", email="ryan.lewis@anl.gov"},
    {name = "Doga Ozgulbas", email="dozgulbas@anl.gov"},
    {name = "Abe Stroka", email="astroka@anl.gov"},
    {name = "Tobias Ginsburg", email = "tginsburg@anl.gov"},
]
dependencies = [
    "madsci.node_module~=0.7",
    "madsci.client~=0.7",
    "madsci.common~=0.7",
    "pandas",
    "openpyxl>=3.1.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/AD-SDL/ot2_module"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ipykernel>=6.29.5",
    "pydantic-settings-export>=1.0.3",
]

[tool.pydantic_settings_export]
project_dir = "."
default_settings = [
    "ot2_rest_node:OT2NodeConfig",
]

[[tool.pydantic_settings_export.generators.markdown]]
paths = ["docs/Configuration.md"]

[[tool.pydantic_settings_export.generators.dotenv]]
paths = [".env.example"]

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
