[metadata]
name = ot2_driver
version = attr: ot2_driver.__version__
description = OT2 Driver
long_description = file:README.md
long_description_content_type=text/markdown

url = https://github.com/AD-SDL/ot2_driver
author = Kyle Hippe

[develop]
script_dir=$base/lib/ot2_driver
[install]
install_scripts=$base/lib/ot2_driver

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
	tests
	docs
	scripts


[flake8]
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings = ignore::DeprecationWarning

[pydocstyle]
inherit = false
select = D100, D101, D102, D103, D104, D105, D106, D107
match = .*\.py
